# fog-of-war

./: .gitignore  Cargo.toml  README.md
src/: buffer.rs  hashable_point.rs  io.rs  main.rs
src/parsers/: fit.rs  google_timeline.rs  gpx.rs  mod.rs
ui/: .gitignore  biome.json  eslint.config.js  index.html  package.json
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: Map.tsx
